tests-integration/fixtures/checking/247_do_discard_not_in_scope/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
test :: Effect Int
test' ::
  forall (t19 :: Type -> Type).
    Applicative (t19 :: Type -> Type) => Bind (t19 :: Type -> Type) => (t19 :: Type -> Type) Int

Types

Diagnostics
error[NotInScope]: 'discard' is not in scope
  --> 8:8..11:9
  |
8 | test = do
  |        ^~
error[NotInScope]: 'discard' is not in scope
  --> 13:9..16:9
   |
13 | test' = do
   |         ^~
